--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.call_test_page">
+    package="com.example.Safe_Helmet">
 
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.DIAL_PHONE" />
     <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
     <uses-permission android:name="android.permission.SEND_SMS" />
@@ -10,12 +10,17 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_main_1"
-        android:label="Call_test_page"
+        android:label="Safe Helmet"
         android:roundIcon="@mipmap/ic_main_1_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Call_test_page">
-        <activity android:name="com.example.call_test_page.MainActivity"
-            android:label="safe_helmet">
+
+        <service
+            android:name=".MyService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,4 +28,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
