[App] 블루투스_수정 1. 스마트폰과 아두이노간의 블루투스 연결이 되도록 소스코드 수정 2. 아두이노로부터 값을 받아 전화 및 문자를 보내도록 수정

--- a/Safe_Helmet/app/src/main/AndroidManifest.xml
+++ b/Safe_Helmet/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="8" />
 
     <uses-permission android:name="android.permission.VIBRATE" />
 
@@ -20,7 +21,8 @@
         android:roundIcon="@mipmap/ic_launcher_1_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Safe_Helmet">
-        <activity android:name=".BluetoothCommunication"></activity>
+        <activity android:name=".SensorActivity"></activity>
+        <activity android:name=".BluetoothCommunication" />
         <activity android:name=".ConnectBluetoothActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
