--- a/Safe_Helmet/app/build.gradle
+++ b/Safe_Helmet/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.preference:preference:1.1.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.akexorcist:bluetoothspp:1.0.0'
+    implementation 'org.twitter4j:twitter4j-core:[4.0,)'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
