--- a/Safe_Helmet/build.gradle
+++ b/Safe_Helmet/build.gradle
@@ -5,8 +5,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.1'
-
+        classpath 'com.android.tools.build:gradle:7.0.3'
+        //implementation 'com.google.android.material:material:<version>'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
