[App] 1. GoogleMaps API에서 지도가 활성되지 않는 버그 수정 2. GPS를 통한 속도(km/h)를 시스템 내에서 표시

--- a/Safe_Helmet/app/src/main/AndroidManifest.xml
+++ b/Safe_Helmet/app/src/main/AndroidManifest.xml
@@ -22,10 +22,10 @@
         android:roundIcon="@mipmap/ic_launcher_1_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Safe_Helmet" >
-        <activity
-            android:name="com.save_us.safe_helmet.GoogleMaps"
-            android:exported="false"
-            tools:ignore="MissingClass" />
+<!--        <activity-->
+<!--            android:name="com.save_us.safe_helmet.GoogleMaps"-->
+<!--            android:exported="false"-->
+<!--            tools:ignore="MissingClass" />-->
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
