--- a/Safe_Helmet/app/build.gradle
+++ b/Safe_Helmet/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'com.akexorcist:bluetoothspp:1.0.0'
     implementation 'org.twitter4j:twitter4j-core:[4.0,)'
+    implementation 'com.google.android.gms:play-services-identity:17.0.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
