--- a/Safe_Helmet/app/src/main/AndroidManifest.xml
+++ b/Safe_Helmet/app/src/main/AndroidManifest.xml
@@ -16,12 +16,14 @@
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_1"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_1_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Safe_Helmet" >
+        android:theme="@style/Theme.Safe_Helmet"
+        tools:targetApi="m">
 <!--        <activity-->
 <!--            android:name="com.save_us.safe_helmet.GoogleMaps"-->
 <!--            android:exported="false"-->
